deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
  labels:
    app: todo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-deployment
  template:
    metadata:
      labels:
        app: todo-deployment
    spec:
      containers:
      - name: todo-deployment
        image: adguchiya/todo-node:latest
        ports:
        - containerPort: 8001
