service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-deployment
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      nodePort: 30000  # Choose a suitable nodePort value
  type: NodePort
